[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Characters/Characters.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Poppins-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/default.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Win.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/Poppins-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/GUI/Button_disabled.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Button_hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Button.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Button_pressed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Music/win.ogg" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 151, 46 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_top = 2.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 151, 46 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 151, 46 )

[sub_resource type="StyleBoxTexture" id=5]
content_margin_bottom = 2.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 151, 46 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="WinningScene" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.89093
margin_top = -1.78177
margin_right = -0.89093
margin_bottom = -1.78177
color = Color( 0.956863, 0.890196, 0.772549, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Characters" type="Sprite" parent="."]
position = Vector2( 249.074, 149.338 )
texture = ExtResource( 1 )

[node name="YouWin" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -180.135
margin_right = 160.0
margin_bottom = -89.135
rect_pivot_offset = Vector2( 263.15, 45.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.478431, 0.384314, 0.384314, 1 )
text = "YOU WIN!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.0
margin_top = -136.612
margin_right = 157.0
margin_bottom = -86.6123
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 314.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.478431, 0.384314, 0.384314, 1 )
text = "Score: 0"
align = 1

[node name="RemainingCash" type="Label" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 314.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.478431, 0.384314, 0.384314, 1 )
text = "Remaining Cash: 0 bits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="." instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -73.6998
margin_right = 75.0
margin_bottom = -31.6998
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Menu"

[node name="Transition" parent="." instance=ExtResource( 11 )]

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="Transition/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Transition"]
